# tcp-serial-agent

./: CMakeLists.txt  README.md  go.mod  main.go
include/: defs.h  error.h  program_options.h  serial.h  tcp_server.h
src/: error.cpp  main.cpp  program_options.cpp  serial.cpp  tcp_server.cpp
wrappers/: client_wrapper.go  serial_wrapper.go  socket_wrapper.go
